--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -10,3 +10,9 @@
   service:
     name: prometheus-node-exporter
     state: restarted
+
+- name: restart firewalld
+  service:
+    name: firewalld
+    state: restarted
+
