--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,17 @@
 ---
 
+# user and group for running node-exporter
+prometheus_exporters_common_user: prometheus
+prometheus_exporters_common_group: prometheus
+
+# directories used by node-exporter
+prometheus_exporters_common_root_dir: /opt/prometheus/exporters
+prometheus_exporters_common_dist_dir: "{{ prometheus_exporters_common_root_dir }}/dist"
+prometheus_exporters_common_log_dir: /var/log/prometheus
+prometheus_exporters_common_conf_dir: /etc/prometheus/exporters
+prometheus_exporters_common_textfile_scripts: "{{ prometheus_exporters_common_root_dir }}/scripts"
+prometheus_exporters_common_textfile_output: /var/lib/prometheus/node-exporter
+
 # minimum supported version: 0.15
 prometheus_node_exporter_version: 0.18.1
 prometheus_node_exporter_release_name: "node_exporter-{{ prometheus_node_exporter_version }}.linux-amd64"
